--- a/src/app/forms-demo/formly-form-demo/formly-form-demo.component.html
+++ b/src/app/forms-demo/formly-form-demo/formly-form-demo.component.html
@@ -1,7 +1,7 @@
 <mat-card>
 	<mat-card-title>@ngx-formly/material</mat-card-title>
 	<mat-card-content>
-		<form role="form" novalidate [formGroup]="form" (ngSubmit)="submit()">
+		<form role="form" [formGroup]="form" (ngSubmit)="submit()">
 			<formly-form [model]="model" [fields]="fields" [form]="form">
 				<button type="submit" color="primary" [disabled]="!form.valid" mat-raised-button>Submit</button>
 			</formly-form>
