--- a/src/app/forms-demo/dynamic-form/dynamic-form.component.html
+++ b/src/app/forms-demo/dynamic-form/dynamic-form.component.html
@@ -1,12 +1,17 @@
 <mat-card>
 	<mat-card-title>Dynamic form</mat-card-title>
 	<mat-card-content>
-		<form [formGroup]="form">
+		<form [formGroup]="form" (ngSubmit)="onSubmit()">
 			<div *ngFor="let prop of personProps">
 				<mat-form-field class="full-width">
 					<input matInput type="text" [placeholder]="prop" [formControlName]="prop">
 				</mat-form-field>
 			</div>
+			<button type="submit" color="primary" [disabled]="!form.valid" mat-raised-button>Submit</button>
 		</form>
 	</mat-card-content>
+</mat-card>
+
+<mat-card class="result-card">
+	{{ person | json }}
 </mat-card>
