--- a/src/app/forms-demo/formly-form-demo/formly-form-demo.component.html
+++ b/src/app/forms-demo/formly-form-demo/formly-form-demo.component.html
@@ -9,6 +9,6 @@
 	</mat-card-content>
 </mat-card>
 
-<mat-card *ngIf="resultObject" class="result-card">
-	{{ resultObject | json }}
+<mat-card class="result-card">
+	{{ model | json }}
 </mat-card>
