--- a/src/app/forms-demo/reactive-form/reactive-form.component.html
+++ b/src/app/forms-demo/reactive-form/reactive-form.component.html
@@ -1,7 +1,7 @@
 <mat-card>
 	<mat-card-title>Reactive form</mat-card-title>
 	<mat-card-content>
-		<form [formGroup]="form" (ngSubmit)="onSubmit(form)">
+		<form [formGroup]="form" (ngSubmit)="onSubmit()">
 			<mat-form-field>
 				<input matInput placeholder="Name" formControlName="name">
 				<mat-error *ngIf="form.get('name').invalid && form.get('name').hasError('required')">
@@ -22,6 +22,11 @@
 					<mat-option *ngFor="let power of powers" [value]="power">{{ power }}</mat-option>
 				</mat-select>
 			</mat-form-field>
+			<button type="submit" color="primary" [disabled]="!form.valid" mat-raised-button>Submit</button>
 		</form>
 	</mat-card-content>
+</mat-card>
+
+<mat-card class="result-card">
+	{{ hero | json }}
 </mat-card>
