--- a/src/app/forms-demo/template-driven-form/template-driven-form.component.html
+++ b/src/app/forms-demo/template-driven-form/template-driven-form.component.html
@@ -18,6 +18,15 @@
 					</mat-option>
 				</mat-select>
 			</mat-form-field>
+			<mat-form-field>
+					<mat-select placeholder="City" [(ngModel)]="hero.city" name="city" multiple>
+						<mat-option *ngFor="let city of cities" [value]="city.value">{{ city.name }}</mat-option>
+					</mat-select>
+				</mat-form-field>
 		</form>
 	</mat-card-content>
+</mat-card>
+
+<mat-card class="result-card">
+	{{ hero | json }}
 </mat-card>
